chore: update colorscheme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-background_opacity 0.3
+background_opacity 0.6
 
 # Font
 font_family      CaskaydiaCove Nerd Font
@@ -15,24 +15,40 @@ confirm_os_window_close 1
 scrollback_lines 1000
 
 # Colorscheme solarized-dark
-background              #00141a
-foreground              #839496
-cursor                  #93a1a1
-selection_background    #81908f
-selection_foreground    #002831
-color0                  #073642
-color1                  #dc322f
-color2                  #859900
-color3                  #b58900
-color4                  #268bd2
-color5                  #d33682
-color6                  #2aa198
-color7                  #eee8d5
-color9                  #cb4b16
-color8                  #002b36
-color10                 #586e75
-color11                 #657b83
-color12                 #839496
-color13                 #6c71c4
-color14                 #93a1a1
-color15                 #fdf6e3
+background #001419
+foreground #839395
+selection_background #0F4463
+selection_foreground #839395
+url_color #D6FFAC
+cursor #839395
+cursor_text_color #001419
+# Tabs
+active_tab_background #268BD3
+active_tab_foreground #001419
+inactive_tab_background #002C38
+active_border_color #268BD3
+inactive_border_color #002C38
+
+# normal
+color0 #001014
+color1 #DB302D
+color2 #849900
+color3 #B28500
+color4 #268BD3
+color5 #D23681
+color4 #268BD3
+color5 #D23681
+color6 #29A298
+color7 #EEE8D5
+# bright
+color8 #4D6066
+color9 #DB302D
+color10 #849900
+color11 #B28500
+color12 #268BD3
+color13 #D23681
+color14 #29A298
+color15 #839395
+# extended colors
+color16 #C94C16
+color17 #FF9D9B
