chore(kitty): update terminal dark color

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -41,7 +41,7 @@ color5 #D23681
 color6 #29A298
 color7 #EEE8D5
 # bright
-color8 #4D6066
+color8 #586E75
 color9 #DB302D
 color10 #849900
 color11 #B28500
