--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -16,8 +16,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, M, exit
-bind = $mainMod, TAB, workspace, previous
-bind = $mainMod SHIFT, F4, exec, ~/dot/.config/scripts/hypr/grim.sh
+bind = $mainMod SHIFT, S, exec, ~/dot/.config/scripts/hypr/grim.sh
 
 # Volume
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
@@ -56,8 +55,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, TAB, togglespecialworkspace, magic
+bind = $mainMod SHIFT, TAB, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
