chore(hypr): add keybindinds for change wallpapers

--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -17,6 +17,7 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, M, exit
 bind = $mainMod SHIFT, S, exec, ~/dot/.config/scripts/hypr/grim.sh
+bind = $mainMod SHIFT, Z, exec, ~/dot/.config/scripts/hypr/wallpapers.sh
 
 # Volume
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
