chore(hypr): add more window rules

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -34,6 +34,8 @@ windowrule = float, ^(Spotify)$
 windowrule = float, ^(Clockify)$
 windowrule = float, ^(Slack)$
 windowrule = float, ^(discord)$
+windowrule = float, ^(feh)$
+windowrule = float, ^(mpv)$
 
 windowrule = workspace 1, ^(kitty)$
 windowrule = workspace 2, ^(Brave-browser)$
