feat: add new window rules and add apple music

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -48,3 +48,15 @@ windowrule = workspace 5, ^(discord)$
 windowrule = workspace 5, ^(thunderbird)$
 windowrule = workspace 5, ^(Slack)$
 windowrule = workspace 5, ^(Clockify)$
+
+# Apple music
+windowrulev2 = float,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
+windowrulev2 = size 55% 55%,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
+windowrulev2 = center,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
+windowrulev2 = workspace 4,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
+
+# ChatGPT
+windowrulev2 = float,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
+windowrulev2 = size 23% 100%,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
+windowrulev2 = move 100%-w-2,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
+windowrulev2 = workspace 2,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
