--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -31,7 +31,10 @@
 
   "group/quicklinks": {
     "orientation": "horizontal",
-    "modules": ["custom/chatgpt"]
+    "modules": [
+      "custom/chatgpt",
+      "custom/music"
+    ]
   },
 
   "group/hardware": {
