--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,8 @@
 background_opacity 0.5
 
 # Font
-font_family      CaskaydiaCove Nerd Font
+font_family      MonaspiceNe Nerd Font Mono
+font_features MonaspiceNeNF-Regular +ss01 +ss03
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
