chore(hypr): add auto set wallpaper script on start

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -5,3 +5,4 @@
 exec-once = swww-daemon & waybar & swaync & gammastep
 exec-once = ~/dot/.config/hypr/gtk.sh
 exec-once = xhost +SI:localuser:root
+exec-once = ~/dot/.config/scripts/hypr/wallpapers.sh
