--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,14 +1,12 @@
 background_opacity 0.5
 
 # Font
-font_family      MonaspiceNe Nerd Font Mono
-font_features MonaspiceNeNF-Regular +ss01 +ss03
+font_family      DankMono Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 16.0
-disable_ligatures never
+font_size 18.0
 
 confirm_os_window_close 1
 
