chore(theme): update gtk theme

--- a/.config/hypr/conf/loock.conf
+++ b/.config/hypr/conf/loock.conf
@@ -32,10 +32,10 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # drop_shadow = true
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -67,12 +67,12 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
-    no_gaps_when_only = 1
+    # no_gaps_when_only = 1
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_is_master = true
+    # new_is_master = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
