chore(hypr): disable border when only one window

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -60,3 +60,6 @@ windowrulev2 = float,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
 windowrulev2 = size 23% 100%,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
 windowrulev2 = move 100%-w-2,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
 windowrulev2 = workspace 2,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
+
+# Disable border when only one window
+windowrulev2 = noborder, onworkspace:w[t1]
