--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,41 +13,53 @@ confirm_os_window_close 1
 # History
 scrollback_lines 1000
 
-# Colorscheme solarized-dark
+# vim:ft=kitty
+
+## name: Solarized Osaka
+## license: MIT
+## author: Folke Lemaitre
+## upstream: https://github.com/craftzdog/solarized-osaka.nvim/raw/main/extras/kitty/solarized_osaka_night.conf
+
+
 background #001419
 foreground #839395
-selection_background #0F4463
+selection_background #002c38
 selection_foreground #839395
-url_color #D6FFAC
+url_color #29a298
 cursor #839395
 cursor_text_color #001419
+
 # Tabs
-active_tab_background #268BD3
-active_tab_foreground #001419
-inactive_tab_background #002C38
-active_border_color #268BD3
-inactive_border_color #002C38
+active_tab_background #29a298
+active_tab_foreground #ffffff
+inactive_tab_background #002c38
+inactive_tab_foreground #637981
+#tab_bar_background #001014
+
+# Windows
+active_border_color #268bd3
+inactive_border_color #002c38
 
 # normal
-color0 #001014
-color1 #DB302D
+color0 #607081
+color1 #db302d
 color2 #849900
-color3 #B28500
-color4 #268BD3
-color5 #D23681
-color4 #268BD3
-color5 #D23681
-color6 #29A298
-color7 #EEE8D5
+color3 #b28500
+color4 #268bd3
+color5 #d23681
+color6 #29a298
+color7 #839395
+
 # bright
-color8 #586E75
-color9 #DB302D
+color8 #576d74
+color9 #db302d
 color10 #849900
-color11 #B28500
-color12 #268BD3
-color13 #D23681
-color14 #29A298
+color11 #b28500
+color12 #268bd3
+color13 #d23681
+color14 #29a298
 color15 #839395
+
 # extended colors
-color16 #C94C16
-color17 #FF9D9B
+color16 #c94c16
+color17 #f55350
