chore(kitty): update comment colors for kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -41,7 +41,7 @@ active_border_color #268bd3
 inactive_border_color #002c38
 
 # normal
-color0 #607081
+color0 #586e75
 color1 #db302d
 color2 #849900
 color3 #b28500
