chore(keybindings): add wlogout to exit

--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -15,7 +15,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen, 1
-bind = $mainMod SHIFT, M, exit
+bind = $mainMod SHIFT, M, exec, wlogout
 bind = $mainMod SHIFT, S, exec, ~/dot/.config/scripts/hypr/grim.sh
 bind = $mainMod SHIFT, Z, exec, ~/dot/.config/scripts/hypr/wallpapers.sh
 
