--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -2,7 +2,7 @@
 # Autostart
 # ----------------------------------------------------- 
 
-exec-once = swww-daemon & waybar & swaync & gammastep & birdtray
+exec-once = swww-daemon & waybar & swaync & gammastep & thunderbird
 exec-once = ~/dot/.config/hypr/gtk.sh
 exec-once = xhost +SI:localuser:root
 exec-once = ~/dot/.config/scripts/hypr/wallpapers.sh
