chore(hypr): change default browser

--- a/.config/hypr/conf/my-programs.conf
+++ b/.config/hypr/conf/my-programs.conf
@@ -7,6 +7,5 @@
 # Set programs that you use
 $terminal = kitty
 $fileManager = yazi
-# $menu = tofi-drun | xargs hyprctl dispatch exec --
 $menu = tofi-drun --drun-launch=true
-$browser = zen
+$browser = brave
