--- a/.config/hypr/conf/my-programs.conf
+++ b/.config/hypr/conf/my-programs.conf
@@ -5,7 +5,7 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = yazi
 $menu = tofi-drun --drun-launch=true
 $browser = brave
