--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,4 @@
-# appearance
+# Appearance
 theme = Solarized Dark - Patched
 background-opacity = 0.75
 background-blur-radius = 40
@@ -8,46 +8,47 @@ cursor-style = block
 cursor-style-blink = false
 cursor-invert-fg-bg = true
 mouse-hide-while-typing = true
+gtk-tabs-location = bottom
 
-# macOS-specific settings
+# MacOS-specific settings
 macos-titlebar-style = tabs
 macos-option-as-alt = true
 
-# window controls
+# Window controls
 confirm-close-surface = true
 font-family = DankMono Nerd Font Mono
 window-decoration = true
 window-padding-balance = true
 window-save-state = always
 
-# auto update settings
+# Auto update settings
 auto-update = download
 auto-update-channel = stable
 
-# extras
+# Extras
 shell-integration-features = true
 # copy-on-select = clipboard
 focus-follows-mouse = true
 link-url = true
 
-# custom keybindings
+# Custom keybindings
 keybind = alt+r=reload_config
 keybind = alt+i=inspector:toggle
 keybind = alt+f=toggle_fullscreen
 keybind = alt+left=previous_tab
 keybind = alt+right=next_tab
 
-# zellij-like prefix controlled keybindings
+# Zellij-like prefix controlled keybindings
 keybind = alt+t>n=new_tab
 keybind = alt+b>f=toggle_fullscreen
 
-# splits
+# Splits
 keybind = alt+p>r=new_split:right
 keybind = alt+p>d=new_split:down
 keybind = alt+p>e=equalize_splits
 keybind = alt+p>z=toggle_split_zoom
 
-# split navigation 
+# Split navigation 
 keybind = alt+p>h=goto_split:left
 keybind = alt+p>j=goto_split:bottom
 keybind = alt+p>k=goto_split:top
@@ -56,3 +57,7 @@ keybind = alt+p>left=goto_split:left
 keybind = alt+p>down=goto_split:bottom
 keybind = alt+p>up=goto_split:top
 keybind = alt+p>right=goto_split:right
+
+# Tabs navigation
+keybind = alt+t>l=next_tab
+keybind = alt+t>h=previous_tab
