--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ source = ~/dot/.config/hypr/conf/monitors.conf
 source = ~/dot/.config/hypr/conf/my-programs.conf
 source = ~/dot/.config/hypr/conf/autostart.conf
 source = ~/dot/.config/hypr/conf/env.conf
-source = ~/dot/.config/hypr/conf/loock.conf
+source = ~/dot/.config/hypr/conf/look.conf
 source = ~/dot/.config/hypr/conf/input.conf
 source = ~/dot/.config/hypr/conf/keybindings.conf
 source = ~/dot/.config/hypr/conf/rules.conf
