refactor(hypr): put cursor on worskpace 1 on start

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -6,3 +6,5 @@ exec-once = swww-daemon & waybar & swaync & gammastep & thunderbird
 exec-once = ~/dot/.config/hypr/gtk.sh
 exec-once = xhost +SI:localuser:root
 exec-once = ~/dot/.config/scripts/hypr/wallpapers.sh
+# Put cursor on workspace 1 on start
+exec-once = hyprctl dispatch workspace 1
