--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -42,6 +42,7 @@ windowrule = workspace 2, ^(Brave-browser)$
 windowrule = workspace 2, ^(firefox)$
 windowrule = workspace 2, ^(Chromium)$
 windowrule = workspace 2, ^(ResponsivelyApp)$
+windowrule = workspace 3, ^(yaak-app)$
 windowrule = workspace 4, ^(Spotify)$
 windowrule = workspace 5, ^(discord)$
 windowrule = workspace 5, ^(Slack)$
@@ -53,6 +54,11 @@ windowrulev2 = float,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/brows
 windowrulev2 = size 55% 55%,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
 windowrulev2 = center,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
 windowrulev2 = workspace 4,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
+
+# Yaak
+windowrulev2 = float,class:^(yaak-app)$
+windowrulev2 = size 55% 55%,class:^(yaak-app)$
+windowrulev2 = center,class:^(yaak-app)$
 
 # ChatGPT
 windowrulev2 = float,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
