--- a/.config/lazygit/config.fzf.yml
+++ b/.config/lazygit/config.fzf.yml
@@ -18,6 +18,8 @@ customCommands:
         2. **Relevance:** Avoid mentioning a module name unless it's directly relevant to the change.
         3. **Enumeration:** List the commit messages from 1 to 10.
         4. **Clarity and Conciseness:** Each message should clearly and concisely convey the change made.
+        5. **Don't start with symbols. Only provide the list of messages. Don't add anything at the beginning or end. Don't use comma or dots to start or end. Only use \\\`<type>: <description>\\\` format.**
+
 
         **Commit Message Examples:**
 
