fix(hypr): fix breaking changes of rules

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -1,69 +1,59 @@
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
+###############################
+#### WINDOWS AND WORKSPACES ###
+###############################
+#
+## See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+## See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+#
+windowrule = suppressevent maximize, class:.* # You'll probably like this.
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
-windowrule = noblur, ^(Brave-browser)$
-windowrule = noblur, ^(Chromium)$
-windowrule = noblur, ^(pavucontrol)$
-windowrule = noblur, ^(blueman-manager)$
-windowrule = noblur, ^(Spotify)$
-windowrule = noblur, ^(Clockify)$
-windowrule = noblur, ^(Slack)$
-windowrule = noblur, ^(discord)$
-windowrule = noblur, ^(thunar)$
+windowrule = noblur, class:Brave-browser
+windowrule = noblur, class:Chromium
+windowrule = noblur, class:pavucontrol
+windowrule = noblur, class:blueman-manager
+windowrule = noblur, class:Spotify
+windowrule = noblur, class:Clockify
+windowrule = noblur, class:Slack
+windowrule = noblur, class:discord
+windowrule = noblur, class:thunar
+windowrule = opacity 0.8 override 0.8 override 1.0 override, class:ghostty
 
 layerrule = blur, waybar
 layerrule = blur, launcher
 
-windowrule = tile, ^(Brave-browser)$
-windowrule = tile, ^(Chromium)$
-windowrule = float, ^(pavucontrol)$
-windowrule = float, ^(blueman-manager)$
-windowrule = float, ^(Spotify)$
-windowrule = float, ^(Clockify)$
-windowrule = float, ^(Slack)$
-windowrule = float, ^(discord)$
-windowrule = float, ^(feh)$
-windowrule = float, ^(mpv)$
+windowrule = tile, class:Brave-browser
+windowrule = tile, class:Chromium
+windowrule = float, class:pavucontrol
+windowrule = float, class:blueman-manager
+windowrule = float, class:Spotify
+windowrule = float, class:Clockify
+windowrule = float, class:Slack
+windowrule = float, class:discord
+windowrule = float, class:feh
+windowrule = float, class:mpv
 
-windowrule = workspace 1, ^(kitty)$
-windowrule = workspace 2, ^(Brave-browser)$
-windowrule = workspace 2, ^(firefox)$
-windowrule = workspace 2, ^(Chromium)$
-windowrule = workspace 2, ^(ResponsivelyApp)$
-windowrule = workspace 3, ^(yaak-app)$
-windowrule = workspace 4, ^(Spotify)$
-windowrule = workspace 5, ^(discord)$
-windowrule = workspace 5, ^(Slack)$
-windowrule = workspace 5, ^(Clockify)$
-windowrule = workspace 6, ^(thunderbird)$
+windowrule = workspace 1, class:kitty
+windowrule = workspace 2, class:Brave-browser
+windowrule = workspace 2, class:firefox
+windowrule = workspace 2, class:Chromium
+windowrule = workspace 2, class:ResponsivelyApp
+windowrule = workspace 3, class:yaak-app
+windowrule = workspace 4, class:Spotify
+windowrule = workspace 5, class:discord
+windowrule = workspace 5, class:Slack
+windowrule = workspace 5, class:Clockify
+windowrule = workspace 6, class:thunderbird
 
-# Apple music
-windowrulev2 = float,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
-windowrulev2 = size 55% 55%,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
-windowrulev2 = center,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
-windowrulev2 = workspace 4,class:^(Chromium)$,initialTitle:^(music.apple.com_/co/browse)$
+## Apple music
+windowrule = float,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
+windowrule = size 55% 55%,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
+windowrule = center,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
+windowrule = workspace 4,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
 
-# Yaak
-windowrulev2 = float,class:^(yaak-app)$
-windowrulev2 = size 55% 55%,class:^(yaak-app)$
-windowrulev2 = center,class:^(yaak-app)$
-
-# ChatGPT
-windowrulev2 = float,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
-windowrulev2 = size 23% 100%,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
-windowrulev2 = move 100%-w-2,class:^(Chromium)$,initialTitle:^(chat.openai.com_/)$
+## Yaak
+windowrule = float,class:yaak-app
+windowrule = size 55% 55%,class:yaak-app
+windowrule = center,class:yaak-app
 
 # Disable border when only one window
-windowrulev2 = noborder, onworkspace:w[t1]
+windowrule = noborder, onworkspace:w[t1]
