--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,8 @@
 # Appearance
 theme = Solarized Dark - Patched
-background-opacity = 0.75
-background-blur-radius = 40
+background-opacity = 0.65
+background-blur = true
+unfocused-split-opacity = 0.8
 font-family = DankMono Nerd Font Mono
 font-size = 18
 cursor-style = block
