chore(hypr): update opacity rules

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -16,7 +16,8 @@ windowrule = noblur, class:Clockify
 windowrule = noblur, class:Slack
 windowrule = noblur, class:discord
 windowrule = noblur, class:thunar
-windowrule = opacity 0.8 override 0.8 override 1.0 override, class:ghostty
+
+windowrule = opacity 1.0 override 0.8 override 1.0 override, class:com.mitchellh.ghostty
 
 layerrule = blur, waybar
 layerrule = blur, launcher
