chore(hypr): add new env

--- a/.config/hypr/conf/env.conf
+++ b/.config/hypr/conf/env.conf
@@ -6,3 +6,4 @@ env = WLR_NO_HARDWARE_CURSORS, 1
 env = WLR_RENDERER_ALLOW_SOFTWARE, 1
 env = XCURSOR_SIZE,24
 env = GTK_THEME,WhiteSur:dark
+env = QT_QPA_PLATFORM,wayland
