--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -11,8 +11,8 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, $terminal -e $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, bracketleft, pseudo, # dwindle
+bind = $mainMod, bracketright, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, M, exec, wlogout
@@ -23,7 +23,6 @@ bind = $mainMod SHIFT, Z, exec, ~/dot/.config/scripts/hypr/wallpapers.sh
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -58,6 +57,16 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Move window
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, J, movewindow, u
+bind = $mainMod SHIFT, K, movewindow, d
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 
 # Example special workspace (scratchpad)
 bind = $mainMod, TAB, togglespecialworkspace, magic
