feat(swaync): add swaync configuration

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -8,3 +8,4 @@ exec-once = xhost +SI:localuser:root
 exec-once = ~/dot/.config/scripts/hypr/wallpapers.sh
 # Put cursor on workspace 1 on start
 exec-once = hyprctl dispatch workspace 1
+exec-once = systemctl --user start hyprpolkitagent
