--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -58,3 +58,11 @@ windowrule = center,class:yaak-app
 
 # Disable border when only one window
 windowrule = noborder, onworkspace:w[t1]
+
+# Swaync
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
