--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -79,3 +79,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Notification center
+bind = $mainMod, N, exec, swaync-client -t  # Toggle panel
