chore(config): update wifi toggle command

--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -65,8 +65,7 @@
           "label": "",
           "active": true,
           "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && nmcli radio wifi on || nmcli radio wifi off'",
-          "update-command": "sh -c '[[ $(nmcli r wifi) == \"enabled\" ]] && echo true || echo false'",
-          "icon": "./icons/bolt.png"
+          "update-command": "sh -c '[[ $(nmcli r wifi) == \"enabled\" ]] && echo true || echo false'"
         },
         {
           "label": "",
