feat(wofi): add wofi config file

--- a/.config/hypr/conf/my-programs.conf
+++ b/.config/hypr/conf/my-programs.conf
@@ -7,5 +7,5 @@
 # Set programs that you use
 $terminal = ghostty
 $fileManager = yazi
-$menu = tofi-drun --drun-launch=true
+$menu = wofi --show drun
 $browser = brave
