--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -66,3 +66,8 @@ layerrule = ignorezero, swaync-control-center
 layerrule = ignorezero, swaync-notification-window
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
+
+# Wofi
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+layerrule = ignorealpha 0.5, wofi
