fix(modules): remove custom/notification module

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -23,8 +23,7 @@
     "custom/exit",
     "group/hardware",
     "hyprland/language",
-    "clock",
-    "custom/notification"
+    "clock"
   ],
   "group/quicklinks": {
     "orientation": "horizontal",
