chore(hypr): update rules for amusic app

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -46,10 +46,10 @@ windowrule = workspace 5, class:Clockify
 windowrule = workspace 6, class:thunderbird
 
 ## Apple music
-windowrule = float,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
-windowrule = size 55% 55%,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
-windowrule = center,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
-windowrule = workspace 4,class:Chromium,initialTitle:^(music.apple.com_/co/browse)$
+windowrule = float,class:AppleMusic
+windowrule = size 55% 55%,class:AppleMusic
+windowrule = center,class:AppleMusic
+windowrule = workspace 4,class:AppleMusic
 
 ## Yaak
 windowrule = float,class:yaak-app
