chore(hypr): add default browser zen

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -16,6 +16,10 @@ windowrule = noblur, class:Clockify
 windowrule = noblur, class:Slack
 windowrule = noblur, class:discord
 windowrule = noblur, class:thunar
+windowrule = noblur, class:qvidcap
+windowrule = noblur, class:mpv
+windowrule = noblur, class:feh
+windowrule = noblur, class:thunderbird
 
 windowrule = opacity 1.0 override 0.8 override 1.0 override, class:com.mitchellh.ghostty
 
@@ -38,6 +42,7 @@ windowrule = workspace 2, class:Brave-browser
 windowrule = workspace 2, class:firefox
 windowrule = workspace 2, class:Chromium
 windowrule = workspace 2, class:ResponsivelyApp
+windowrule = workspace 2, class:zen
 windowrule = workspace 3, class:yaak-app
 windowrule = workspace 4, class:Spotify
 windowrule = workspace 5, class:discord
