refactor(helix): update config
- Show bufferline only when multiple buffers are open
- Add custom inline diagnostics

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -4,7 +4,11 @@ theme = "ayu_dark"
 true-color = true
 line-number = "relative"
 mouse = false
-bufferline = "always"
+bufferline = "multiple"
+end-of-line-diagnostics = "hint"
+
+[editor.inline-diagnostics]
+cursor-line = "warning"
 
 [editor.cursor-shape]
 insert = "bar"
