refactor(zed): restructure keybindings and settings
Updated Zed's keymap for improved logic, grouping, and consistency:

- Simplified/contextualized keybindings (e.g., `space space`, `ctrl-h/j/k/l`)
- Added utility hotkeys for common actions (e.g., `Lazygit`, `ToggleFocus`)
- Refined panel toggles (`ToggleLeftDock`, `workspace actions`)

Revamped `settings.json` with cleaner defaults and usability features:

- Enabled Vim mode, relative line numbers, and last session restore
- Aligned font settings with custom theme (CaskaydiaCove Nerd Font)
- Disabled unused UI elements (breadcrumbs, quick actions)
- Improved tab/terminal configurations (auto-install extensions)

This refactor aims to bridge redundant mappings, declutter settings, and optimize workflow productivity.

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,55 +1,114 @@
 {
-  "assistant": {
+  "vim_mode": true,
+  "relative_line_numbers": true,
+  "ui_font_size": 20,
+  "buffer_font_size": 20,
+  "ui_font_family": "CaskaydiaCove Nerd Font",
+  "buffer_font_family": "CaskaydiaCove Nerd Font",
+  "buffer_line_height": "standard",
+  "restore_on_startup": "last_session",
+  "auto_install_extensions": {
+    "html": true,
+    "astro": true
+  },
+  "scrollbar": {
+    "show": "never"
+  },
+  "tab_bar": {
+    "show": true,
+    "show_nav_history_buttons": false,
+    "show_tab_bar_buttons": false
+  },
+  "tabs": {
+    "file_icons": true,
+    "git_status": true,
+    "activate_on_close": "left_neighbour",
+    "show_close_button": "hover"
+  },
+  "toolbar": {
+    "breadcrumbs": false,
+    "quick_actions": false
+  },
+  "diagnostics": {
+    "include_warnings": true,
+    "inline": {
+      "enabled": true
+    },
+    "update_with_cursor": false,
+    "primary_only": false,
+    "use_rendered": false
+  },
+  "icon_theme": {
+    "mode": "system",
+    "dark": "Symbols",
+    "light": "Symbols"
+  },
+  "tab_size": 2,
+  "terminal": {
+    "button": false,
+    "font_family": "CaskaydiaCove Nerd Font",
+    "font_weight": 300,
+    "toolbar": {
+      "breadcrumbs": false
+    },
+    "shell": "system",
+    "line_height": {
+      "custom": 1.2
+    }
+  },
+  "theme": {
+    "mode": "system",
+    "light": "Ayu Light",
+    "dark": "Ayu Dark"
+  },
+  "project_panel": {
+    "button": false,
     "dock": "right",
+    "entry_spacing": "standard",
+    "default_width": 440,
+    "indent_guides": {
+      "show": "never"
+    },
+    "auto_reveal_entries": false
+  },
+  "agent": {
+    "button": true,
+    "model_parameters": [],
     "default_model": {
       "provider": "copilot_chat",
-      "model": "gpt-4o"
+      "model": "gpt-4.1"
     },
     "version": "2"
   },
-  "buffer_font_size": 19,
-  "buffer_font_family": "MonaspiceNe Nerd Font Mono",
-  "buffer_line_height": { "custom": 1.25 },
-  "centered_layout": {
-    "left_padding": 0.2,
-    "right_padding": 0.2
+  "outline_panel": {
+    "button": false
   },
-  "collaboration_panel": { "dock": "left" },
-  "chat_panel": { "dock": "left" },
-  "git": { "inline_blame": { "enabled": false } },
-  "indent_guides": { "enabled": false, "coloring": "indent_aware" },
-  "notification_panel": { "dock": "left" },
-  "outline_panel": { "dock": "right" },
-  "project_panel": {
-    "button": true,
-    "dock": "right",
-    "git_status": true,
-    "scrollbar": {
-      "show": "never"
-    }
+  "collaboration_panel": {
+    "button": false
   },
-  "preview_tabs": { "enable_preview_from_code_navigation": false },
-  "relative_line_numbers": true,
-  "theme": "NeoSolarized Dark",
-  "terminal": {
-    "env": {
-      "EDITOR": "zed --wait"
-    }
+  "features": {
+    "edit_prediction_provider": "copilot"
   },
-  "tabs": { "git_status": true },
-  "ui_font_size": 19,
-  "vim_mode": true,
-  "experimental.theme_overrides": {
-    "background.appearance": "blurred",
-    "background": "#00141969",
-    "editor.background": "#00141969",
-    "editor.gutter.background": "#00141969",
-    "tab_bar.background": "#00141969",
-    "toolbar.background": "#00141969",
-    "tab.inactive_background": "#00141969",
-    "status_bar.background": "#00141969",
-    "title_bar.background": "#00141969",
-    "panel.background": "#00141969",
-    "scrollbar.track.border": "#00141969"
+  "edit_predictions": {
+    "disabled_globs": [
+      "**/node_modules/**",
+      "**/vendor/**",
+      "**/dist/**",
+      "**/build/**",
+      "**/out/**",
+      "**/.git/**",
+      "**/.hg/**",
+      "**/.svn/**",
+      "**/.idea/**",
+      "**/.vscode/**",
+      "**/.DS_Store",
+      "**/.*ignore"
+    ],
+    "mode": "eager",
+    "copilot": {
+      "proxy": null,
+      "proxy_no_verify": null
+    },
+    "enabled_in_text_threads": false
   }
 }
